--- a/env.sh.sample
+++ b/env.sh.sample
@@ -11,12 +11,7 @@ export AWS_DEFAULT_PROFILE=default
 export AWS_DEFAULT_REGION=us-west-2
 #export AWS_DEFAULT_REGION=us-east-1
 
-# Fill this in with either the default VPC from your AWS region
-# or with a VPC and subnet ID that have automatic assignment of
-# IPv4 addresses enabled.
-#export PACKER_AWS_VPC_ID=vpc-XXXXXXXX
-#export PACKER_AWS_SUBNET_ID=subnet-YYYYYYYY
-# credentials for IAM user - needed for Docker packer when run locally
+# credentials for IAM user - needed for Docker terraform when run locally
 #export AWS_ACCESS_KEY_ID=XXXXXXXXXXXXXXXXXXXX
 #export AWS_SECRET_ACCESS_KEY=YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY
 
