deploying with new terraform docker image
deploying with new terraform docker image

--- a/applications/spin/Dockerfile
+++ b/applications/spin/Dockerfile
@@ -17,6 +17,9 @@ RUN yum install -y https://centos7.iuscommunity.org/ius-release.rpm \
 # Copy in your requirements file
 ADD src/requirements.txt /app/requirements.txt
 
+# Copy in config-app
+ADD config-app.sh /app/config-app.sh
+
 # Copy in bin
 ADD bin /app/bin
 
