--- a/env.sh.sample
+++ b/env.sh.sample
@@ -15,3 +15,4 @@ export AWS_DEFAULT_REGION=us-west-2
 #export AWS_ACCESS_KEY_ID=XXXXXXXXXXXXXXXXXXXX
 #export AWS_SECRET_ACCESS_KEY=YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY
 
+export PROJECT_NAME="k8s-eks-scaling-demo-cluster"
